Fixes #2552 Added css styles to youtube miniplayer list to give a fixed height.  Also added scroll style to force scrollbar

--- a/app/src/main/assets/web_extensions/webcompat_youtube/main.css
+++ b/app/src/main/assets/web_extensions/webcompat_youtube/main.css
@@ -60,3 +60,12 @@ div.ytp-fullscreen video, .fxr-vr-video {
     height: 100% !important;
     position: relative !important;
 }
+
+
+
+#items
+{
+	display: block;
+	height: 60%;
+	overflow-y:scroll;
+}
